# video-stab

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_GSTD_INTERPIPE.md
examples/: CMakeCache.txt  CMakeLists_hardware_encoder.txt  GST  JetsonEncoder.cpp  JetsonEncoder.h  Makefile  README_hardware_encoder.md  all_in_one  all_in_one.cpp  build_gstd_interpipe.sh  build_hardware_encoder.sh  cmake_install.cmake  config (3rd copy).yaml  config (copy).yaml  config.yaml  config.yaml.bak  config_gstd_interpipe.yaml  config_hardware_encoder.yaml  config_tracker.txt  dev  file-capture  file-capture.cpp  final  final copy  final-before-tracking.cpp  final-best  final-gstd-try  final-gstd-try.cpp  final.cpp  gstd-sample.sh  labels.txt  main-ffmpeg  main-ffmpeg.cpp  main-gst  main-gst copy.cpp  main-gst-gstd-capi  main-gst-gstd-capi.cpp  main-gstd  main-gstd copy  main-gstd copy.cpp  (+41 more)
include/video/: AutoZoomCrop.h  CamCap.h  CamCapInterpipe.h  DeepStreamTracker.h  Enhancer.h  GstdManager.h  Mode.h  RTSPServer.h  RollCorrection.h  Stabilizer.h  TcpReciever.h  stabilizer_cuda.h
python/: setup.cpp
spare/: AutoZoomCrop copy.cpp  AutoZoomCrop.cpp
src/: AutoZoomCrop.cpp  CamCap.cpp  CamCapInterpipe.cpp  DeepStreamTracker.cpp  Enhancer.cpp  GstdManager.cpp  RTSPServer.cpp  RollCorrection.cpp  Stabilizer.cpp  Stabilizer_legacy.cpp  TcpReciever.cpp  stabilizer_cuda.cu
